conformance_test/core_language_tests/positive_tests/09_test_configurations/0901_communication_ports/NegSem_0901_Communication_ports_002.ttcn
/******************************************************************************
 * Copyright (c) 2000-2016 Ericsson Telecom AB
 * All rights reserved. This program and the accompanying materials
 * are made available under the terms of the Eclipse Public License v1.0
 * which accompanies this distribution, and is available at
 * http://www.eclipse.org/legal/epl-v10.html
 *
 * Contributors:
 *   Adrien Kirjak – initial implementation
 *
 ** @version  0.0.1
 ** @purpose  1:9, Ensure that it is not possible to connect a mapped port
 ** @verdict  pass reject
 ***************************************************/

/*NOTE: see Figure 7(f): connection of two TSI ports is not allowed
 * */

module NegSem_0901_Communication_ports_002{ 


    type port loopbackPort message { 
	  inout integer
	} with {extension "internal"}

	type component GeneralComp {	    	    
		  port loopbackPort p1;
		 
	}	

	type component System {	    	    
		  port loopbackPort p1;
		 
	}	

	testcase TC_NegSem_0901_Communication_ports_002() runs on GeneralComp system System {
		
		var GeneralComp v_ptc := GeneralComp.create;
		map(self:p1, system:p1);		
		connect(self:p1, v_ptc:p1); // error: v_ptc.p1 is already connected to SystemComp.p1
		setverdict(pass);
	 
	}

	control{
		execute(TC_NegSem_0901_Communication_ports_002());
	}

}
